--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack -p --optimize-minimize"
+    "build": "cross-env NODE_ENV=production webpack -p --optimize-minimize "
   },
   "sideEffects": false,
   "devDependencies": {
@@ -18,6 +18,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.1.4",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
