--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.4",
     "html-webpack-plugin": "^3.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   }
 }
