--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,17 @@
 {
 	"presets": [
-      ["env", { "modules": false }],
-      "react"
-    ],
-	"plugins": ["react-hot-loader/babel"]
+		["env", { "modules": false }],
+		"react",
+		"stage-0"
+	],
+	"plugins": [
+		"react-hot-loader/babel",
+		"react-html-attrs",
+		"transform-class-properties",
+		"transform-decorators-legacy",
+		[
+			"transform-runtime", { "polyfill": false, "regenerator": true }
+		],
+		["import", { "libraryName": "antd-mobile" }]
+	]
 }
