--- a/package.json
+++ b/package.json
@@ -1,42 +1,92 @@
 {
   "dependencies": {
+    "antd-mobile": "^2.1.8",
+    "axios": "^0.18.0",
+    "es6-promise": "^4.2.4",
     "glob-all": "^3.1.0",
+    "loadable-components": "^1.3.0",
+    "object-assign": "^4.1.1",
+    "promise": "^8.0.1",
+    "qs": "^6.5.1",
     "react": "^16.3.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-css-modules": "^4.7.2",
     "react-dom": "^16.3.1",
-    "react-hot-loader": "^4.0.1"
+    "react-hot-loader": "^4.0.1",
+    "react-loadable": "^5.3.1",
+    "react-responsive-carousel": "^3.1.36",
+    "react-router-dom": "^4.2.2",
+    "vue": "^2.5.16",
+    "vue-3d-picker": "^2.1.0",
+    "vuera": "^0.2.1"
   },
+  "sideEffects": [
+    "./polyfills.js",
+    "*.scss"
+  ],
   "name": "react-webpack-starter",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js -p --optimize-minimize "
+    "clean": "rimraf dist",
+    "visualize": "npm run build && open dist/stats.html",
+    "build-vendor": "npm run clean && cross-env NODE_ENV=production webpack --config vendor-bundles.webpack.prod.js -p --optimize-minimize",
+    "build": "npm run build-vendor && cross-env NODE_ENV=production webpack --config webpack.prod.js -p --optimize-minimize",
+    "dev-vendor": "webpack --config vendor-bundles.webpack.dev.js",
+    "start": "npm run dev-vendor && webpack-dev-server --open --config webpack.dev.js",
+    "bundle-out": "npm run dev-vendor && webpack --config webpack.dev.js"
   },
-  "sideEffects": [
-    "*.css"
+  "browserslist": [
+    ">1%",
+    "iOS > 6",
+    "last 4 versions",
+    "Firefox ESR",
+    "not ie < 9"
   ],
   "devDependencies": {
+    "add-asset-html-webpack-plugin": "^2.1.3",
     "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.7.0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "gulp-imagemin": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.2.0",
+    "my-local-ip": "^1.0.0",
+    "node-gyp": "^3.6.2",
     "node-sass": "^4.8.3",
+    "postcss": "^6.0.21",
     "postcss-flexbugs-fixes": "^3.3.0",
+    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.3",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.0.1",
+    "vconsole": "^3.2.0",
+    "vue-loader": "^14.2.2",
+    "vue-style-loader": "^4.1.0",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
